--- a/styles.css
+++ b/styles.css
@@ -12,5 +12,21 @@
 }
 
 html {
-    
+    font-size: 62.5%;
+}
+
+.header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 2rem 9%;
+    z-index: 2;
+}
+
+.header .logo. .img {
+    height: 6rem;
 }
