--- a/styles.css
+++ b/styles.css
@@ -25,8 +25,27 @@ html {
     justify-content: space-between;
     padding: 2rem 9%;
     z-index: 2;
+    background: #000;
 }
 
 .header .logo .img {
     height: 6rem;
+}
+
+.header .navbar #close {
+    display: none;
+}
+
+.header .navbar a{
+    font-size: 2rem;
+    margin-right: 2rem;
+    color: #fff;
+}
+
+.header .navbar a:hover {
+    color: #d3ad7f;
+}
+
+.header #menu {
+    display: none;
 }
